--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.0",
+    "react-bootstrap-icons": "^1.7.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-native": "^0.66.4",
+    "react-router": "^6.2.1",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.3"
+    "react-scroll": "^1.8.4",
+    "web-vitals": "^2.1.3",
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "start": "react-scripts start",
