--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
     "web-vitals": "^2.1.3",
-    "webfontloader": "^1.6.28"
+    "webfontloader": "^1.6.28",
+    "homepage": "https://chrisquinn135.github.io/chris-website/"
+
   },
   "scripts": {
     "predeploy": "npm run build",
